clusters/homelab/apps/affine/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: collaboration
  labels:
    app.kubernetes.io/name: collaboration
    app.kubernetes.io/part-of: homelab
    istio.io/dataplane-mode: ambient
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
